<resources>
    <string name="app_name">Find The Right One</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="descartes">\@etu.parisdescartes.fr</string>
    <string name="mdp">Mot de passe</string>
    <string name="home">Home</string>
    <string name="dut_2">DUT 2</string>
    <string name="dut_1">DUT 1</string>
    <string name="swipe">Swipe</string>
    <string name="editer">Editer</string>
    <string name="profile">Profil</string>
    <string name="confirm">Confirmer</string>
    <string name="close">Fermer</string>
    <string name="no_more_profile">Tu as vu tous les profiles !</string>
    <string name="see_profile_again">Revoir les profils</string>
    <string name="description">Description</string>
    <string name="adj_layout">Adjectif - Adjectif - Adjectif</string>
    <string name="name">Nom</string>
    <string name="stay_connected">Rester connecté</string>
    <string name="deconect">Deconnection</string>
    <string name="votre_inscription_est_en_cours_de_traitement">Votre inscription est en cours de traitement...</string>
    <string name="valider">Valider</string>
</resources>
