<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivStudentPic"
        android:layout_width="143dp"
        android:layout_height="140dp"
        android:layout_above="@+id/tvNameSwipe"
        android:layout_centerHorizontal="true"
        app:civ_border_color="#707070"
        app:civ_border_width="0.1dp" />

    <TextView
        android:id="@+id/tvNameSwipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvAdjSwipe"
        android:layout_centerInParent="true"
        android:fontFamily="@font/fjallaone_regular"
        android:text="@string/name"
        android:textColor="@color/textAccent"
        android:textSize="30sp" />


    <TextView
        android:id="@+id/tvAdjSwipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvDescriptionSwipe"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/fjallaone_regular"
        android:text="@string/adj_layout"
        android:textColor="@color/textPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvDescriptionSwipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/fjallaone_regular"
        android:text="@string/description"
        android:textColor="@color/textPrimary"
        android:textSize="15sp" />


</RelativeLayout>