<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <EditText
        android:id="@+id/etMailFP"
        android:layout_width="181dp"
        android:layout_height="50dp"
        android:layout_above="@+id/okForgotButton"
        android:layout_alignStart="@+id/okForgotButton"
        android:layout_marginBottom="80dp"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:fontFamily="@font/fjallaone_regular"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textCursorDrawable="@null"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="129dp" />



    <Button
        android:id="@+id/okForgotButton"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:background="@color/bleuButton"
        android:fontFamily="@font/fjallaone_regular"
        android:text="@string/valider"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="314dp" />

    <ImageView
        android:id="@+id/ivFogotLogo"
        android:layout_width="245dp"
        android:layout_height="177dp"
        android:layout_above="@+id/hintEmailFP"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:contentDescription="Logo"
        app:srcCompat="@mipmap/password_forgot" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/white">

        <Button
            android:id="@+id/bHomeFP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/button2"
            android:background="@color/white"
            android:fontFamily="@font/segoeui"
            android:stateListAnimator="@null"
            android:text="@string/home"
            android:textAllCaps="false"
            android:textColor="@color/darkBleuText"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bLoginFP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/white"
            android:fontFamily="@font/segoeui"
            android:stateListAnimator="@null"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/darkBleuText"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/descartesMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etMailFP"
        android:layout_toEndOf="@+id/etMailFP"
        android:fontFamily="@font/fjallaone_regular"
        android:text="@string/descartes"
        android:textColor="@color/colorAccent"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/hintEmailFP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etMailFP"
        android:layout_alignStart="@+id/etMailFP"
        android:layout_marginBottom="13dp"
        android:fontFamily="@font/fjallaone_regular"
        android:text="@string/email"
        android:textColor="@color/colorAccent"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvSuccesFP"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/descartesMail"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/opensanscondensed_light"
        android:text="Un mail vous a été envoyé pour renouveler votre mot de passe."
        android:textAlignment="center"
        android:textColor="@color/textPrimary"
        android:textSize="20sp"
        android:visibility="invisible" />


</RelativeLayout>



